--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Dylan Baker Web Solutions</title>
+    <title>Dylan Baker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({ duration: "1500" });
     </script>
   </body>
 </html>
