--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,30 @@
     <title>Dylan Baker</title>
   </head>
   <body>
+      <form
+      method="post"
+      data-netlify="true"
+      data-netlify-recaptcha="true"
+      name="contact"
+    >
+      <input
+        type="text"
+        name="name"
+      />
+      <br />
+      <input
+        type="email"
+        name="email"
+      />
+      <br />
+      <textarea
+        type="text"
+        name="message"
+      />
+      <br />
+      <div data-netlify-recaptcha="true"></div>
+      <input className="form-submit" type="submit" value="Send" />
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
