contact form bug fix 3

--- a/public/index.html
+++ b/public/index.html
@@ -13,26 +13,17 @@
     <title>Dylan Baker</title>
   </head>
   <body>
-      <form
+    <form
       method="post"
       data-netlify="true"
       data-netlify-recaptcha="true"
       name="contact"
     >
-      <input
-        type="text"
-        name="name"
-      />
+      <input type="text" name="name" />
       <br />
-      <input
-        type="email"
-        name="email"
-      />
+      <input type="email" name="email" />
       <br />
-      <textarea
-        type="text"
-        name="message"
-      />
+      <textarea type="text" name="message"></textarea>
       <br />
       <div data-netlify-recaptcha="true"></div>
       <input className="form-submit" type="submit" value="Send" />
