--- a/public/form.html
+++ b/public/form.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form
-      method="post"
+      method="POST"
       data-netlify="true"
       data-netlify-recaptcha="true"
       name="contact"
