--- a/public/form.html
+++ b/public/form.html
@@ -8,14 +8,38 @@
   </head>
   <body>
     <form
-      method="POST"
+      id="contact-form"
+      method="post"
       data-netlify="true"
       data-netlify-recaptcha="true"
       name="contact"
     >
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea type="text" name="message"></textarea>
+      <input type="hidden" name="form-name" value="contact" />
+      <input
+        className="form-input"
+        placeholder="Name"
+        type="text"
+        name="name"
+        required
+      />
+      <br />
+      <input
+        className="form-input"
+        placeholder="Email"
+        type="email"
+        name="email"
+        required
+      />
+      <br />
+      <textarea
+        className="form-input"
+        placeholder="Message"
+        type="text"
+        name="message"
+        rows="5"
+        required
+      ></textarea>
+      <br />
       <div data-netlify-recaptcha="true"></div>
       <input className="form-submit" type="submit" value="Send" />
     </form>
