--- a/public/form.html
+++ b/public/form.html
@@ -7,23 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-        <form
-        method="POST"
-        name="contact"
-      >
-        <input
-          type="text"
-          name="name"
-        />
-        <input
-          type="email"
-          name="email"
-        />
-        <textarea
-          type="text"
-          name="message"
-        ></textarea>
-      </form>
+    <form method="POST" name="contact">
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea type="text" name="message"></textarea>
     </form>
   </body>
 </html>
